# lazycmd

./: .envrc  .gitignore  .lazy.lua  .luarc.json  AGENTS.md  Cargo.lock.bak  Cargo.toml  LICENSE  README.md  TODO.md  justfile  out  rust-toolchain.toml  shell.nix
.agents/skills/tmux/: SKILL.md
docs/: SELECT_USAGE.md
examples/: app.rs  init.lua  layout.rs  lua.rs  signal.rs  test.rs  test_argv.lua
examples/demo.lazycmd/demo/: action.lua  config.lua  init.lua  meta.lua
examples/minimal.lazycmd/minimal/: init.lua
examples/plugins/align-test.lazycmd/align-test/: init.lua
examples/plugins/highlight-test.lazycmd/: README.md
preset/: equal.lua  init.lua  inject.lua  plugins.lua  type.lua  types.lua  util.lua
preset/lua/: README.md  api.lua  base64.lua  cache.lua  clipboard.lua  component.lua  config.lua  copy_from_neovim.lua  default_keymap.lua  fs.lua  global.d.lua  html.lua  http.lua  http_server.lua  init.lua  inspect.lua  interactive.lua  json.lua  keymap.lua  manager.lua  plugin_manager.lua  promise.lua  secrets.lua  socket.lua  string.lua  style.lua  system.lua  time.lua  url.lua  util.lua  yaml.lua
scripts/: setup_dev.sh
src/: README.md  action.rs  app.rs  confirm_handler.rs  errors.rs  events.rs  input_handler.rs  items.rs  keymap.rs  log.rs  lua.rs  main.rs  mode.rs  page.rs  path_codec.rs  preview.rs  ro_cell.rs  select_handler.rs  state.rs  term.rs  widgets.rs
src/plugin/: README.md  event.rs  lua.rs  macros.rs  mod.rs  scope.rs
src/plugin/converter/: event_name.rs  list_item.rs  mod.rs  page_entry.rs  renderable.rs  span.rs
src/plugin/lc/: api.rs  base64.rs  cache.rs  clipboard.rs  cmd.rs  defer_fn.rs  fs.rs  highlighter.rs  http.rs  json.rs  keymap.rs  mod.rs  plugin_manager.rs  secrets.rs  style.rs  system.rs  time.rs  ui.rs  yaml.rs
src/plugin/lc/api/: mod.rs  (+1 more)
src/widgets/: README.md  confirm.rs  footer.rs  header.rs  image.rs  input.rs  list.rs  mod.rs  native_image.rs  renderable.rs  select.rs  text.rs
(+29 files in other folders)
