[package]
name    = "lazycmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1.0.89"
libc         = "0.2.159"
mlua         = { version = "0.10.0-rc.1", features = ["lua54", "async", "macros"] }
mlua_derive  = { version = "0.10.0-rc.1" }
ratatui      = "0.28.1"
tokio        = { version = "1.40.0", features = ["full"] }
crossterm    = { version = "0.28.0", features = ["event-stream"] }
futures      = "0.3.28"
lazy_static  = "1.5.0"
better-panic = "0.3.0"
tokio-stream = "0.1.16"
async-stream = "0.3.6"
