[package]
name    = "lazycmd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow             = "1.0.89"
libc               = "0.2.159"
mlua               = { version = "0.10.0", features = ["lua54", "error-send"] }
ratatui            = "0.29.0"
tokio              = { version = "1.40.0", features = ["full"] }
crossterm          = { version = "0.28.0", features = ["event-stream"] }
futures            = "0.3.28"
better-panic       = "0.3.0"
tokio-stream       = "0.1.16"
async-stream       = "0.3.6"
tracing-appender   = "0.2.3"
tracing-subscriber = "0.3.18"
tracing            = "0.1.40"
shell-words        = "1.1.0"
ansi-to-tui = "7.0.0"
